--- a/eks/DockerfileCPU
+++ b/eks/DockerfileCPU
@@ -8,7 +8,7 @@ RUN \
   apt-get update && \
   apt install software-properties-common -y && \
   add-apt-repository ppa:deadsnakes/ppa -y && \
-  apt install wget git build-essential net-tools libgl1 needrestart -y 
+  apt install wget git build-essential net-tools libgl1 needrestart python3.10 python3-pip python-is-python3 python3.10-venv -y 
 RUN pip install httpx==0.22.0 && pip install httpcore==0.14.7
 
 RUN echo -e "Get stable-diffusion-webui ..."
@@ -26,6 +26,8 @@ RUN git clone https://github.com/TipTopBin/stable-diffusion-webui-images-browser
 
 EXPOSE 7860
 ENV CLI_ARGS=""
-
-ENTRYPOINT ["/bin/bash"]
-CMD ["${SD_HOME}/stable-diffusion-webui/webui.sh --listen --port 7860 ${CLI_ARGS}"]
+RUN chown -R 1000:1000 $SD_HOME/ && mkdir -p /.cache && chmod 777 -R /.cache
+# COPY entrypoint.sh $SD_HOME/
+# ENTRYPOINT ["$SD_HOME/stable-diffusion-webui/webui.sh"]
+# ENTRYPOINT ["/bin/bash"]
+CMD ${SD_HOME}/stable-diffusion-webui/webui.sh --listen --port 7860 ${CLI_ARGS}
