--- a/eks/DockerfileCPU
+++ b/eks/DockerfileCPU
@@ -1,7 +1,6 @@
 FROM public.ecr.aws/ubuntu/ubuntu:22.04
 
 ENV SD_HOME=/sd
-WORKDIR $SD_HOME
 
 RUN echo -e "Prepare runtime ..."
 RUN \
@@ -27,4 +26,6 @@ RUN git clone https://github.com/TipTopBin/stable-diffusion-webui-images-browser
 EXPOSE 7860
 ENV CLI_ARGS=""
 RUN chown -R 1000:1000 $SD_HOME/ && mkdir -p /.cache && chmod 777 -R /.cache
+# WorkingDirectory 注意一定要进入到这个目录
+WORKDIR $SD_HOME/stable-diffusion-webui
 CMD ${SD_HOME}/stable-diffusion-webui/webui.sh --listen --port 7860 ${CLI_ARGS}
